# WickedSpaceFlight

./: .gitignore  CMakeLists.txt  CREDITS.md  LICENSE  README.md  Tests.vcxproj  Tests.vcxproj.filters  WickedSpaceFlight.cpp  WickedSpaceFlight.h  WickedSpaceFlight.rc  main_SDL2.cpp  stdafx.h
Assets/: AsteroidTestScene.wiscene  spaceship.wiscene
Assets/asteroids_pack_rocky_version/: scene.gltf
